[project]
name = "roadpay"
version = "0.1.0"
description = "BlackRoad Payment Processing - Stripe, Subscriptions, Invoices"
authors = [{name = "BlackRoad OS", email = "blackroad.systems@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
keywords = ["payments", "stripe", "subscriptions", "invoices", "blackroad"]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "stripe>=7.10.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "redis>=5.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.23.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
roadpay = "roadpay.main:cli"
